# gxde-kwin

./: CMakeLists.txt
configures/: kwin_no_scale.in  kwinrc
debian/: changelog  control  dde-kwin.install  gxde-kwin.install
deepin-wm-dbus/: CMakeLists.txt  deepinwmfaker.cpp
plugins/: CMakeLists.txt
plugins/kdecoration-kde6/: CMakeLists.txt
plugins/kdecoration-kde6/deepin/dark/: titlebar.ini
plugins/kdecoration/deepin/dark/: decoration.ini
plugins/kdecoration/deepin/light/: decoration.ini  titlebar.ini
plugins/kwin-xcb-kde6/lib/: CMakeLists.txt
plugins/kwin-xcb/lib/: CMakeLists.txt
plugins/kwin-xcb/plugin/: org.kde.kwin.KWinUtils.xml
